--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title_separator          : "---"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "s01va"
 description              : ""
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://s01va.github.io"
 baseurl                  : "/"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
