--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,9 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "s01va"
 description              : ""
 url                      : "https://s01va.github.io"
-#baseurl                  : "/"
+baseurl                  : "/"
 repository               : "s01va/s01va.github.io"
-baseurl                  : "/blog"
+#baseurl                  : "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/Dominator4.png"
