--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 #theme                  : "minimal-mistakes-jekyll"
 
 #theme                  : "jekyll-theme-minimal"
-remote_theme           : "mmistakes/minimal-mistakes"
+remote_theme           : "mmistakes/minimal-mistakes@4.17.2"
 minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
