--- a/_config.yml
+++ b/_config.yml
@@ -163,7 +163,8 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - _pages
+  - _posts
+  #- _pages
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
