--- a/_config.yml
+++ b/_config.yml
@@ -288,7 +288,7 @@ compress_html:
 defaults:
    _posts
   - scope:
-      path: "/_posts/"
+      path: ""
       type: posts
     values:
       layout: single
