--- a/_config.yml
+++ b/_config.yml
@@ -162,8 +162,7 @@ footer:
 # Reading Files
 include:
   - .htaccess
-  - _posts
-  #- _pages
+  - _pages
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
