--- a/_config.yml
+++ b/_config.yml
@@ -296,3 +296,11 @@ defaults:
       comments: # true
       share: true
       related: true
+    #pages
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      
