--- a/_config.yml
+++ b/_config.yml
@@ -114,8 +114,8 @@ analytics:
 author:
   name             : "s01va"
   avatar           : "/assets/bio/Dominator4.png"
-  bio              : "start"
-  location         : "Somewhere"
+  bio              : "전산쟁이"
+  location         : "in Session"
   email            :
   links:
     - label: "Email"
