--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,4 +6,11 @@ main:
     url: /tags/
   - title: "Categories"
     url: /categories/
-  
+
+docs:
+  - title: "WAS"
+    children:
+      - title: "JEUS"
+        url: /dd/dd
+      - title: "WebLogic"
+        url: /  /  
