--- a/_config.yml
+++ b/_config.yml
@@ -305,4 +305,10 @@ defaults:
     values:
       layout: single
       author_profile: true
+  - scope:
+      path: ""
+      type: docs
+    values:
+      sidebar:
+        nav: "docs"
 
