for add sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -287,13 +287,6 @@ compress_html:
 
 # Defaults
 defaults:
-  # _docs
-  - scope:
-      path: ""
-      type: docs
-    values:
-      sidebar:
-        nav: "docs"
   # _posts
   - scope:
       path: ""
@@ -305,6 +298,8 @@ defaults:
       comments: # true
       share: true
       related: true
+      sidebar:
+        nav: "categorydocs"
     #pages
   - scope:
       path: "_pages"
@@ -312,3 +307,5 @@ defaults:
     values:
       layout: single
       author_profile: true
+      sidebar:
+        nav: "categorydocs"
