for add sidebar category

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
   - title: "Categories"
     url: /categories/
 
-docs:
+categorydocs:
   - title: "WAS"
     children:
       - title: "JEUS"
