--- a/_config.yml
+++ b/_config.yml
@@ -302,17 +302,17 @@ defaults:
         nav: "categorydocs"
 # home
   - scope:
-      path: ""
+      path: "_layouts/home.html"
       type: home
     values:
       sidebar:
         nav: "categorydocs"
     #pages
-#  - scope:
-#      path: "_pages"
-#      type: pages
-#    values:
-#      layout: single
-#      author_profile: true
-#      sidebar:
-#        nav: "categorydocs"
+  - scope:
+      path: "_pages"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+      sidebar:
+        nav: "categorydocs"
