--- a/_config.yml
+++ b/_config.yml
@@ -289,7 +289,8 @@ compress_html:
 defaults:
   # _posts
   - scope:
-      path: ""
+      #path: ""
+      path: "_layouts"
       type: posts
     values:
       layout: single
@@ -298,13 +299,6 @@ defaults:
       comments: # true
       share: true
       related: true
-      sidebar:
-        nav: "categorydocs"
-# home
-  - scope:
-      path: "_layouts/home.html"
-      type: home
-    values:
       sidebar:
         nav: "categorydocs"
     #pages
