--- a/_config.yml
+++ b/_config.yml
@@ -287,10 +287,9 @@ compress_html:
 
 # Defaults
 defaults:
-  # _posts
+  # posts
   - scope:
-      #path: ""
-      path: "_layouts"
+      path: ""
       type: posts
     values:
       layout: single
@@ -301,12 +300,20 @@ defaults:
       related: true
       sidebar:
         nav: "categorydocs"
-    #pages
+  # _pages
   - scope:
       path: "_pages"
       type: pages
     values:
       layout: single
+      author_profile: true
+      sidebar:
+        nav: "categorydocs"
+  # home
+  - scope:
+      path: ""
+      type: 
+    values:
       author_profile: true
       sidebar:
         nav: "categorydocs"
