--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 
 #theme                  : "jekyll-theme-minimal"
 remote_theme           : "mmistakes/minimal-mistakes@4.17.2"
-minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "sunrise" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 # locale                   : "en-US"
