add category: reversing

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,6 +20,11 @@ categorydocs:
       - title: "webhacking.kr"
         url: /tags/#webhacking-kr
 
+  - title: "Reversing"
+    children:
+      - title: "CodeEngn Basic"
+        url: /tags/#codeengn-basic
+
   - title: "Pwnable"
     children:
       - title: "Lord of BOF"
