testing home sidebar

--- a/_config.yml
+++ b/_config.yml
@@ -309,3 +309,12 @@ defaults:
       author_profile: true
       sidebar:
         nav: "categorydocs"
+  # _layouts/home
+  - scope:
+      path: ""
+      type: home
+    values:
+      layout: single
+      author_profile: true
+      sidebar:
+        nav: "categorydocs"
