test home with sidebat

--- a/_config.yml
+++ b/_config.yml
@@ -311,7 +311,7 @@ defaults:
         nav: "categorydocs"
   # _layouts/home
   - scope:
-      path: ""
+      path: "_layouts"
       type: home
     values:
       layout: single
