--- a/_config.yml
+++ b/_config.yml
@@ -305,7 +305,7 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      layout: single
+      layout: 
       author_profile: true
       sidebar:
         nav: "categorydocs"
