change category JVM -> troubleshooting

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ categorydocs:
         url: /tags/#jeus
       - title: "WebLogic"
         url: /tags/#weblogic
-      - title: "JVM"
-        url: /tags/#jvm
+      - title: "Troubleshooting"
+        url: /tags/#troubleshooting
 
   - title: "Web Hacking"
     children:
