--- a/_config.yml
+++ b/_config.yml
@@ -292,7 +292,7 @@ defaults:
       type: posts
     values:
       layout: single
-      classes: wide
+      #classes: wide
       author_profile: true
       read_time: true
       comments: true
