--- a/_config.yml
+++ b/_config.yml
@@ -215,9 +215,12 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
+  syntax_highlighter: rouge
   syntax_highlighter_opts:
+    css_class: 'highlight'
     block:
       line_numbers: true
+      start_line: 1
 
 
 # Sass/SCSS
