post wide -> narrow

--- a/_config.yml
+++ b/_config.yml
@@ -384,7 +384,7 @@ defaults:
       type: home
     values:
       layout: home
-      classes: wide
+      #classes: wide
       author_profile: true
       read_time: true
       comments: true
