change image file

--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ analytics:
 # Site Author
 author:
   name             : "s01va"
-  avatar           : "/assets/bio/Dominator4.png"
+  avatar           : "/assets/bio/s01vaprofileimage.png"
   bio              : "차곡차곡"
   location         : "in Session"
   email            :
